--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
     "react-redux": "7.2.6",
+    "react-router-dom": "6.2.1",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.9.0",
-    "@typescript-eslint/parser": "5.9.0",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
     "eslint": "8.6.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "16.1.0",
@@ -24,10 +25,11 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "html-webpack-plugin": "5.5.0",
     "ts-loader": "9.2.6",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.5.4",
     "webpack": "5.65.0",
     "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.7.2"
+    "webpack-dev-server": "4.7.4"
   },
   "scripts": {
     "serve": "webpack-dev-server --open",
