TMSFPW-9: add home page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   },
   "rules": {
     "linebreak-style": "off",
+    "react/require-default-props": "off",
     "no-underscore-dangle": ["error", { "enforceInMethodNames": false }]
   }
 }
