--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "html-loader": "^3.1.0",
     "html-webpack-plugin": "5.5.0",
     "ts-loader": "9.2.6",
     "tsconfig-paths-webpack-plugin": "3.5.2",
@@ -32,7 +33,8 @@
     "webpack-dev-server": "4.7.4"
   },
   "scripts": {
-    "serve": "webpack-dev-server --open",
+    "dev": "webpack-dev-server",
+    "open": "xdg-open http://localhost:8080",
     "build": "webpack"
   }
 }
