--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "type": "module",
   "dependencies": {
     "@reduxjs/toolkit": "1.7.1",
-    "@types/react": "17.0.38",
-    "@types/react-dom": "17.0.11",
-    "@types/react-redux": "7.1.21",
-    "@types/styled-components": "5.1.19",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
@@ -14,6 +10,10 @@
     "styled-components": "5.3.3"
   },
   "devDependencies": {
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "@types/react-redux": "7.1.21",
+    "@types/styled-components": "5.1.19",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
     "eslint": "8.6.0",
@@ -23,16 +23,18 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "html-loader": "3.1.0",
     "html-webpack-plugin": "5.5.0",
     "ts-loader": "9.2.6",
     "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.5.4",
     "webpack": "5.65.0",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.7.4"
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.9.2"
   },
   "scripts": {
-    "serve": "webpack-dev-server --open",
+    "dev": "webpack-dev-server",
+    "open": "xdg-open http://localhost:8080",
     "build": "webpack"
   }
 }
